--- a/package.json
+++ b/package.json
@@ -9,8 +9,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-    "fs-extra": "^9.0.0",
-    "jquery": "^3.5.1"
-  }
+  "dependencies": {}
 }
