透明度調整機能追加

--- a/lib/config.json
+++ b/lib/config.json
@@ -10,5 +10,11 @@
     "title": "Image Size",
     "description": "Set Image Size",
     "default": "30%"
+  },
+  "opacity": {
+    "type": "string",
+    "title": "opacity Mascot Charactor",
+    "description": "Set opacity on Mascot Charactor",
+    "default": "0.3"
   }
 }
